--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/multer": "^2.0.0",
     "@vercel/blob": "^2.0.0",
     "browser-image-compression": "^2.0.2",
+    "jose": "^6.1.2",
     "multer": "^2.0.2",
     "next": "14.0.4",
     "react": "^18.2.0",
