--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-image-compression": "^2.0.2",
     "cashfree-pg": "^5.1.0",
     "jose": "^6.1.2",
+    "jspdf": "^3.0.4",
     "multer": "^2.0.2",
     "next": "14.0.4",
     "react": "^18.2.0",
