--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.940.0",
+    "@aws-sdk/s3-request-presigner": "^3.940.0",
     "@types/multer": "^2.0.0",
-    "@vercel/blob": "^2.0.0",
     "browser-image-compression": "^2.0.2",
-    "cashfree-pg": "^5.1.0",
     "jose": "^6.1.2",
     "jspdf": "^3.0.4",
     "multer": "^2.0.2",
