--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "resend": "^6.5.2"
+    "resend": "^6.5.2",
+    "cashfree-pg": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
